--- a/cms/templates/studio_xblock_wrapper.html
+++ b/cms/templates/studio_xblock_wrapper.html
@@ -12,9 +12,9 @@ from cms.lib.xblock.upstream_sync import UpstreamLink
 from openedx.core.djangoapps.content_tagging.toggles import is_tagging_feature_disabled
 %>
 <%
-use_new_editor_text = use_new_text_editor()
-use_new_editor_video = use_new_video_editor()
-use_new_editor_problem = use_new_problem_editor()
+use_new_editor_text = use_new_text_editor(xblock.context_key)
+use_new_editor_video = use_new_video_editor(xblock.context_key)
+use_new_editor_problem = use_new_problem_editor(xblock.context_key)
 use_new_video_gallery_flow = use_video_gallery_flow()
 use_tagging = not is_tagging_feature_disabled()
 xblock_url = xblock_studio_url(xblock)
