feat: Use openassessment manifest.json to load css from dist

--- a/common/templates/xblock_v2/xblock_iframe.html
+++ b/common/templates/xblock_v2/xblock_iframe.html
@@ -109,6 +109,7 @@
   <link rel="stylesheet" href="{{ cms_root_url }}/static/studio/css/vendor/hint.css">
   <link rel="stylesheet" href="{{ cms_root_url }}/static/studio/css/studio-main-v1.css" />
   <link rel="stylesheet" href="{{ cms_root_url }}/static/studio/css/course-unit-mfe-iframe-bundle.css" />
+  <link rel="stylesheet" href="{{ lms_root_url }}/static/dist/{{ oa_studio_css }}">
 
   <!-- Configure and load MathJax -->
   <script type="text/x-mathjax-config">
