--- a/cms/templates/studio_xblock_wrapper.html
+++ b/cms/templates/studio_xblock_wrapper.html
@@ -25,7 +25,7 @@ messages = xblock.validate().to_json()
 has_not_configured_message = messages.get('summary',{}).get('type', None) == 'not-configured'
 block_is_unit = is_unit(xblock)
 
-upstream_info = UpstreamLink.try_get_for_block(xblock)
+upstream_info = UpstreamLink.try_get_for_block(xblock, log_error=False)
 %>
 
 <%namespace name='static' file='static_content.html'/>
@@ -211,12 +211,13 @@ upstream_info = UpstreamLink.try_get_for_block(xblock)
                                 <span data-tooltip="${_('Drag to reorder')}" class="drag-handle action"></span>
                             </li>
                         % endif
-                    % elif not show_inline:
-                        <li class="action-item action-edit action-edit-view-only">
-                            <a href="#" class="edit-button action-button">
-                                <span class="action-button-text">${_("Details")}</span>
-                            </a>
-                        </li>
+                        % if not show_inline:
+                            <li class="action-item action-edit action-edit-view-only">
+                                <a href="#" class="edit-button action-button">
+                                    <span class="action-button-text">${_("Details")}</span>
+                                </a>
+                            </li>
+                        % endif
                     % endif
                 % endif
             </ul>
