fix(instructor-dashboard): make revoke button accessible via keyboard

--- a/lms/static/sass/course/instructor/_instructor_2.scss
+++ b/lms/static/sass/course/instructor/_instructor_2.scss
@@ -864,6 +864,7 @@
         &:hover,
         &:focus {
           color: $alert-color;
+          text-decoration: none !important;
         }
       }
     }
