fix: TIA-60: H2 tag converted into H1 for specific pages

--- a/lms/static/sass/course/base/_extends.scss
+++ b/lms/static/sass/course/base/_extends.scss
@@ -19,6 +19,10 @@ h1.top-header {
   padding-bottom: lh();
 }
 
+h1.instructor-dashboard-title {
+  border-bottom: none !important;
+}
+
 .button-reset {
   text-transform: none;
   letter-spacing: 0;
