--- a/common/templates/xblock_v2/xblock_iframe.html
+++ b/common/templates/xblock_v2/xblock_iframe.html
@@ -48,7 +48,7 @@
             script.type = 'text/javascript';
             script.src = "{{ cms_root_url }}/static/studio/cms/js/require-config.js";
             document.head.appendChild(script);
-            baseUrl = "{{ cms_root_url }}/static/studio"
+            baseUrl = "{{ cms_root_url }}/static/studio";
 
             require.config({
                 baseUrl,
@@ -66,7 +66,7 @@
                 "{{ lms_root_url }}/static/dist{{ oa_manifest.oa_editor_textarea_js }}",
             ]);
         } else {
-            baseUrl = "{{ lms_root_url }}/static/"
+            baseUrl = "{{ lms_root_url }}/static/";
             require.config({
                 baseUrl,
                 paths: {
