feat: add beamer_config

--- a/lms/templates/instructor/instructor_dashboard_2/data_download.html
+++ b/lms/templates/instructor/instructor_dashboard_2/data_download.html
@@ -4,6 +4,12 @@
 from django.utils.translation import gettext as _
 from openedx.core.djangolib.markup import HTML, Text
 %>
+<script>
+	var beamer_config = {
+		product_id : "${settings.BEAMER_PRODUCT_ID | n, js_escaped_string}"
+	};
+</script>
+<script type="text/javascript" src="https://app.getbeamer.com/js/beamer-embed.js" defer="defer"></script>
 
 <div class="data-download-container action-type-container">
   <div class="request-response-error msg msg-error copy" id="data-request-response-error"></div>
