--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_footer.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_footer.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <table cellpadding="0" cellspacing="0" style="color:black; font-weight:400; font-size:12px;line-height:20px" width="100%">
     <tbody>
         <tr>
@@ -31,14 +32,18 @@
         <tr>
             <td>
                 <p style="margin: 1.5rem 0 0 0;">
-                    {{ footer_email_reason|default:"You are receiving this email because you have subscribed to email digest" }}
+                    {% if footer_email_reason %}
+                        {{ footer_email_reason }}
+                    {% else %}
+                        {% trans "You are receiving this email because you have subscribed to email digest" %}
+                    {% endif %}
                 </p>
                 <p style="margin: 0.625rem 0">
                     <a href="{{notification_settings_url}}" rel="noopener noreferrer" target="_blank" style="color: black">
-                        Notification Settings
+                        {% trans "Notification Settings" %}
                     </a>
                     <a href="{{unsubscribe_url}}" rel="noopener noreferrer" target="_blank" style="color: black; margin-left: 1rem">
-                        Unsubscribe from email digest for learning activity
+                        {% trans "Unsubscribe from email digest for learning activity" %}
                     </a>
                 </p>
                 <p>
