--- a/lms/templates/main_django.html
+++ b/lms/templates/main_django.html
@@ -40,6 +40,14 @@
     </script>
   {% endif %}
 
+  {% if google_tag_manager_id %}
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer', '{{ google_tag_manager_id }}');</script>
+  {% endif %}
+
   <meta name="path_prefix" content="{{EDX_ROOT_URL}}">
 </head>
 
