--- a/openedx/core/djangoapps/schedules/templates/schedules/edx_ace/courseupdate/email/return_to_course_cta.html
+++ b/openedx/core/djangoapps/schedules/templates/schedules/edx_ace/courseupdate/email/return_to_course_cta.html
@@ -1,7 +1,6 @@
 {% load i18n %}
 {% load ace %}
 
-<p>
     {# email client support for style sheets is pretty spotty, so we have to inline all of these styles #}
     <a
     {% if reset_url %}
@@ -28,8 +27,11 @@
             display: inline-flex;
             flex-direction: row;
             border-radius: 30.22px;
+            padding-top: 6px;
+            padding-bottom: 6px;
+            padding-left: 11px;
+            padding-right: 11px;
     ">
         {# old email clients require the use of the font tag :( #}
-        <span color="#ffffff"><b>{{ course_cta_text }}</b></span>
+        {{ course_cta_text }}
     </a>
-</p>
